		  with no tags are from the main author(s)

***********************************************************************

xxyy2009 (v2.x.y) -** stable release **-
	- added: new exit code of '4' to ecasound; see entry below
		 about signal handling changes and ecasound(1) for
		 more details
	- added: -eadb chainop, like -ea/-eac, but gain given in dB;
		 documented in ecasound(1)
	- changed: ecasound now defines "-D_XOPEN_SOURCE=500" for 
	           all builds, expressing that the codebase expects 
		   the build environment be compatible with the Single 
		   UNIX Spec v2 (1998); thanks to Jussi Laako for
		   reminding about this
	- changed: yet another change to signal handling in ecasound;
		   now two level response to signals is supported in
		   all stages of process termination -> first starting
		   normal cleanup and exit procudere, and with
		   second signal terminate immediately; see ecasound(1)
		   for the full story (new 'SIGNALS' section)
	- changed: dropped "-funroll-loops" from the set of default
		   compiler options
	- changed: comment out many entries in the global installed
		   'ecasoundrc' file (entries are redundant as the same
	 	   defaults are already set in the program binaries)
	- fixed: mp3 output was broken with lame 3.98 (and newer); 
		 the default lame parameters have now been updated 
		 and have been tested with lame 3.96, 3.97 and with
		 the latest 3.98.2
	- fixed: bad audio with 'resample' object, non-integer sampling 
		 rate changes ratios and output to JACK; ecasound did
		 emit warning about this, but did not raise a fatal 
		 error; now the underlying problem is fixed and now
		 'resample' and 'jack' objects maybe safely used 
		 together
08022009 (v2.6.0) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_6_0_relnotes.txt
	- added: new optional params to 'jack' -> 'jack,clientname,portprefix';