@@ -44,6 +44,7 @@ xxyy2009 (v2.x.y) -** stable release **-
 		 more details
 	- added: -eadb chainop, like -ea/-eac, but gain given in dB;
 		 documented in ecasound(1)
+	- added: -charrange chainop; see ecasound(1)
 	- changed: ecasound now defines "-D_XOPEN_SOURCE=500" for 
 	           all builds, expressing that the codebase expects 
 		   the build environment be compatible with the Single 
